fix gap causing overflow projects slider

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -799,9 +799,12 @@ textarea{
 
 .slick-list .slick-track {
     display: flex;
-    gap: 1.5rem;
 }
 
 .PS .PS_card{
     margin: 0;
+}
+
+.slick-initialized .slick-slide {
+    margin: 1rem
 }
